--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,25 +5,62 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="20dp"
+    android:padding="50dp"
+    android:background="@drawable/signin"
     tools:context=".activity.LoginActivity">
+
+    <TextView
+        android:id="@+id/welcome"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="90dp"
+        android:text="Welcome"
+        android:textColor="@color/white"
+        android:textSize="40dp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/back"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/welcome"
+        android:layout_marginTop="5dp"
+        android:text="Back"
+        android:textColor="@color/white"
+        android:textSize="40dp"
+        android:textStyle="bold"
+        />
 
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/userName1"
-        android:hint="Enter User Name"
+        android:layout_below="@id/back"
+        android:hint="User Name"
         android:layout_marginTop="50dp"
+        android:padding="15dp"
+        android:background="@drawable/text_background"
+
+        android:textColorHint="#BEDAEF"
+        android:textColor="#2196F3"
 
         />
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/password1"
-        android:hint="Enter Password"
+        android:hint="Password"
+        android:inputType="textPassword"
+
         android:layout_marginTop="50dp"
         android:layout_below="@+id/userName1"
+        android:padding="15dp"
+        android:background="@drawable/text_background"
+
+        android:textColorHint="#BEDAEF"
+        android:textColor="#2196F3"
+
 
         />
 
