--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,57 +4,132 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:padding="10dp"
+    android:padding="50dp"
+    android:background="@drawable/signuppage"
     android:layout_height="match_parent"
 
     tools:context=".activity.MainActivity">
 
-    <EditText
+    <TextView
+        android:id="@+id/create"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="70dp"
+        android:text="Create"
+        android:textColor="@color/white"
+        android:textSize="40dp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/account"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/create"
+        android:layout_marginTop="5dp"
+        android:text="Account"
+        android:textColor="@color/white"
+        android:textSize="40dp"
+        android:textStyle="bold" />
+
+    <EditText
         android:id="@+id/userName"
-        android:hint="Enter User Name"
-        android:layout_marginTop="50dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/account"
+        android:layout_marginTop="83dp"
+        android:hint="User Name"
+        android:textColorHint="@color/white"
+        android:textColor="@color/white"
+        android:padding="15dp"
+        android:background="@drawable/text_background"
 
         />
+
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/password"
         android:hint="Enter Password"
-        android:layout_marginTop="50dp"
+        android:inputType="textPassword"
+        android:textColorHint="@color/white"
+        android:layout_marginTop="20dp"
         android:layout_below="@+id/userName"
-
+        android:padding="15dp"
+        android:background="@drawable/text_background"
         />
+
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/rePassword"
         android:hint="Re Enter Password"
-        android:layout_marginTop="50dp"
+        android:inputType="textPassword"
+        android:textColorHint="@color/white"
+        android:layout_marginTop="20dp"
         android:layout_below="@+id/password"
+        android:padding="15dp"
+        android:background="@drawable/text_background"
 
         />
 
+
+
+
+
     <Button
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/rePassword"
-        android:padding="20dp"
-        android:layout_marginTop="50dp"
-        android:text="Register"
+        android:text="Sign Up"
         android:id="@+id/registerBtn"
+        android:layout_marginTop="35dp"
+        android:textColor="@color/white"
+        android:background="#00000000"
+        android:padding="15dp"
+        android:textSize="30dp"
+        android:textStyle="bold"
+
+
+
         />
 
-    <Button
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/registerBtn"
-        android:padding="20dp"
-        android:layout_marginTop="50dp"
-        android:text="Sign In"
-        android:id="@+id/signBtn"
-        />
+        android:orientation="horizontal"
+        android:layout_below="@+id/registerBtn" >
+
+
+
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/signUpText"
+        android:id="@+id/already"
+        android:textSize="15dp"
+        android:padding="5dp"
+        android:layout_margin="5dp"
+        android:text="Already have account?"
+        android:textColor="@color/white"
+        android:textStyle="bold"
+        ></TextView>
+
+
+        <Button
+            android:id="@+id/signBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="#481B50"
+            android:textStyle="bold"
+
+            android:background="@drawable/text_background"
+            android:padding="5dp"
+            android:layout_margin="5dp"
+            android:text="Sign In"
+            android:textSize="20dp" />
+
+    </LinearLayout>
 
 </RelativeLayout>
