--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -38,7 +38,7 @@
         android:id="@+id/userName1"
         android:layout_below="@id/back"
         android:hint="User Name"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="100dp"
         android:padding="15dp"
         android:background="@drawable/text_background"
 
@@ -73,5 +73,34 @@
         android:text="Sign In"
         android:id="@+id/signBtn1"
         />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/signBtn1"
+        android:layout_marginTop="40dp"
+        android:layout_alignParentBottom="true"
+
+
+        >
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="#00000000"
+            android:text="Sign Up"
+            android:id="@+id/newsign"
+            android:textColor="#BEDAEF"
+            ></Button>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:background="#00000000"
+            android:text="Forget password"
+            android:textColor="#BEDAEF"
+            />
+
+    </RelativeLayout>
 
 </RelativeLayout>
