--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -40,7 +40,7 @@
         android:hint="User Name"
         android:layout_marginTop="100dp"
         android:padding="15dp"
-        android:background="@drawable/text_background"
+        android:background="@drawable/text_back"
 
         android:textColorHint="#BEDAEF"
         android:textColor="#2196F3"
@@ -56,7 +56,7 @@
         android:layout_marginTop="50dp"
         android:layout_below="@+id/userName1"
         android:padding="15dp"
-        android:background="@drawable/text_background"
+        android:background="@drawable/text_back"
 
         android:textColorHint="#BEDAEF"
         android:textColor="#2196F3"
@@ -90,7 +90,7 @@
             android:text="Sign Up"
             android:id="@+id/newsign"
             android:textColor="#BEDAEF"
-            ></Button>
+            />
 
         <Button
             android:layout_width="wrap_content"
