--- a/app/src/main/res/layout/headline_list.xml
+++ b/app/src/main/res/layout/headline_list.xml
@@ -5,6 +5,7 @@
     android:layout_height="wrap_content"
     app:cardElevation="8dp"
     android:layout_margin="8dp"
+    android:background="@drawable/card_background"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <LinearLayout
         android:layout_width="match_parent"
